[FIX]: web-ui: fix admin menu badge alignment when collapsed

--- a/packages/web-ui/src/admin/AdminApp/index.less
+++ b/packages/web-ui/src/admin/AdminApp/index.less
@@ -66,6 +66,7 @@
                                 right: -8px;
                                 top: 10px;
                                 z-index: 1;
+                                line-height: 1.5;
                             }
                         }
                     }
